# people_msgs

./: .travis.yml  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
msg/: PeoplePose.msg  PeoplePoseAttributes.msg  PeoplePoseList.msg
srv/: MatchPPL.srv
