<?xml version="1.0"?>
<package format="2">
  <name>people_msgs</name>
  <version>0.0.0</version>
  <description>
    people_msgs defines the messages useful for being aware of the
    users around the robot.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <export>
    <cpp cflags="-I${prefix} -I${prefix}/build"
         lflags="-lim -L${prefix}/lib -Wl,-rpath,${prefix}/lib" />
  </export>
</package>
